# agents_course

./: 2_1_basic_rag.py  2_1_basic_retrieval.py  2_1_multi_agents.py  2_1_multi_agents_using_just_one_agent.py  2_1_web_browser_agent.py  2_3_document_analysis.py  2_3_spam_email_detector.py  3_building_and_integrating_tools.py  3_rag_tool.py  pyproject.toml  testing.py
gala_agent/: app.py  retriever.py  tools.py
